# multi-layer-perceptron

./: pyproject.toml
src/: MLP.py  mlp.py
