
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-layer-perceptron"
version = "0.1.0"
description = "Multi-Layer Perceptron built from scratch"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["mlp"]

